Bug 91061 - LO writer shows only 1 page of a .docx file when the actual doc is 11 pages
Summary: LO writer shows only 1 page of a .docx file when the actual doc is 11 pages
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: Other All
: high major
Assignee: Mike Kaganski
URL:
Whiteboard: target:5.1.0
Keywords: bibisected, regression
Depends on:
Blocks:
 
Reported: 2015-05-03 21:52 UTC by sayantan13
Modified: 2016-10-10 12:03 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
document shows only 1 page (74.44 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2015-05-03 21:52 UTC, sayantan13
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sayantan13 2015-05-03 21:52:45 UTC
Created attachment 115291 [details]
document shows only 1 page

I'm LO v4.4 running on Ubuntu 15.04 x64, a particular CV in .docx format shows only 1 page. IN reality, the document is of 11 pages.

The document opens without issues in MS Word and WPS.

The document is attached with this bug report.
Comment 1 Jean-Baptiste Faure 2015-05-04 05:13:36 UTC
Which version of MS-Word did you use to write this document?
Is your MS-Word able to convert this file in OpenDocument Format?

Best regards. JBF
Comment 2 sayantan13 2015-05-04 08:51:36 UTC
This was a CV which came through. I am not sure which version of MS word was
used.

And, yes, I am able to convert this document to ODT from MS word 2010. After converting when I open using LO 4.4, I am able to see all the pages (12 in total).
Comment 3 raal 2015-05-04 14:40:14 UTC
File is probably not correct, but word2010 can open this file

With Version: 5.0.0.0.alpha1+
Build ID: d2ab54bb0d07d285c91a8ac17f53559e438d042a
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2015-05-03_01:03:40

I can not open file. Error message:

File format error found at 
SAXParseException: '[word/document.xml line 42]: unknown error', Stream 'word/document.xml', Line 42, Column 14070(row,col).
Comment 4 tommy27 2015-05-23 07:43:38 UTC
I can't load file in LibO 5.0 beta1 under Win8x64

I receive this error message:

Errore di formato del file in 
SAXParseException: '[word/document.xml line 42]: unknown error', Stream 'word/document.xml', Line 42, Column 14070(riga,colonna).
Comment 5 tommy27 2015-05-23 07:45:18 UTC
moreover file is loaded as one page only in 4.4.1.2
so at least let's put this as NEW
Comment 6 Timur 2015-08-27 14:43:22 UTC
Regression from 4.0. beta. It was rather fine with 3.6.7.2. Somewhat different, but reproduced with 4.4.5. 5.0+ can't be open due to bug 89100.
Comment 7 Michael Weghorn 2015-08-29 06:11:29 UTC
bibisect result (using the bibisect-43all repository):
 cca0c04dccc1fb2827c929ff2ced5bdb80f915bc is the first bad commit
commit cca0c04dccc1fb2827c929ff2ced5bdb80f915bc
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Mon Dec 10 13:59:49 2012 +0000

    source-hash-179a6db61ee30cf776747802f06edeef45fec461
    
    commit 179a6db61ee30cf776747802f06edeef45fec461
    Author:     Stephan Bergmann <sbergman@redhat.com>
    AuthorDate: Thu Sep 20 15:00:50 2012 +0200
    Commit:     Stephan Bergmann <sbergman@redhat.com>
    CommitDate: Thu Sep 20 15:46:10 2012 +0200
    
        Add RPATH to liblangtag
    
        ...so that it consistenly uses the LO versions of libxml2/glibc libs at runtime.
    
        Change-Id: I89b7fd13a8b5b7e697ec21db74fdf8ef088fdb92

:100644 100644 0db5496d578aee0f311b6b436680c59b73990919 a20479cbaa3727d1fffd44cec83df218caf9dbf1 M	autogen.log
:100644 100644 9d6d729645ee9eb52da162b30afbf62384c4c4a0 49251f9d0d9ad42539c025f06a312edf63e0b41d M	ccache.log
:100644 100644 3f6b5520d512c29e42d8fe27fd72e98da1762290 683966615e12c7b0a8993adef9a738759e4faca1 M	commitmsg
:100644 100644 1b411631e7205c2292a5adc8e89f0680544c50ad a4aa952a0ad0e855345b715c8e45251d33d44dba M	dev-install.log
:100644 100644 0d5ebfee43862a6bbb779cc9a5d0e39f94e9964a f5770dac159934eaa657aff7a3555ca4e47f58f4 M	make.log
:040000 040000 23983a1399e57fdfe5a617f46deea580ab98d3cd 4afde4b72a0a3d21e49d8028e71372ab39154161 M	opt


$ git bisect log
# bad: [2e0fa432485d1db6abd355dad8ccb06f0b97e4fb] source-hash-ce90f99a2d66c2b998ad3f9f028e2ea623a757f5
# good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932
git bisect start 'last40onmaster' 'oldest'
# good: [aed6d9e275e4560aa251d23dd7ba6a0a725afab7] source-hash-c77918bb03974ff9be90c889f77e62ea0755052f
git bisect good aed6d9e275e4560aa251d23dd7ba6a0a725afab7
# good: [241d451e09694446622f9767fb76db50481c9e32] source-hash-c3aa1cefdc6521d34a2a32c20bae1593e1edb5ba
git bisect good 241d451e09694446622f9767fb76db50481c9e32
# bad: [91fed7198400158ba17622fa48f1c85063ba839f] source-hash-7c4d3ea6ba4d42b4dda5148a00c8c411b5d7703d
git bisect bad 91fed7198400158ba17622fa48f1c85063ba839f
# good: [cd18cb7f47f7e956c6d19bd0f31a6e30d1173b29] source-hash-558476135865d9ae7b8801a82c177fd1098386ff
git bisect good cd18cb7f47f7e956c6d19bd0f31a6e30d1173b29
# bad: [8a8370d143cc6c103ed5bf21b849bb7b8309618d] source-hash-69222d71221d0ec81a3dbf01789456bcf2dde0da
git bisect bad 8a8370d143cc6c103ed5bf21b849bb7b8309618d
# bad: [bb53f5537f5dd98997a2148f6a8eafb10d449831] source-hash-93effcb0a2eade8309c53b74d0ea22e8a2217661
git bisect bad bb53f5537f5dd98997a2148f6a8eafb10d449831
# bad: [56de98328b5e6e28aae1f5a8574c4d6500abdf82] source-hash-5f91f8a368343d8921a01edb7359cd300892f09d
git bisect bad 56de98328b5e6e28aae1f5a8574c4d6500abdf82
# bad: [cca0c04dccc1fb2827c929ff2ced5bdb80f915bc] source-hash-179a6db61ee30cf776747802f06edeef45fec461
git bisect bad cca0c04dccc1fb2827c929ff2ced5bdb80f915bc
# first bad commit: [cca0c04dccc1fb2827c929ff2ced5bdb80f915bc] source-hash-179a6db61ee30cf776747802f06edeef45fec461


In the last "good" commit, the document has 17 pages, in the first bad commit, it is only one page.
Comment 8 Timur 2015-11-12 16:19:56 UTC
(In reply to Timur from comment #6)
> 5.0+ can't be open due to bug 89100.
Not that bug. Still can't be open. Reported as Bug 95775.
Comment 9 Stephan Bergmann 2015-11-12 16:52:20 UTC
(In reply to Michael Weghorn from comment #7)
> bibisect result (using the bibisect-43all repository):
> 
> cca0c04dccc1fb2827c929ff2ced5bdb80f915bc is the first bad commit
> commit cca0c04dccc1fb2827c929ff2ced5bdb80f915bc
> Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
> Date:   Mon Dec 10 13:59:49 2012 +0000
> 
>     source-hash-179a6db61ee30cf776747802f06edeef45fec461

So the preceding commit in the bibisect-43all repo is cd18cb7f47f7e956c6d19bd0f31a6e30d1173b29 "source-hash-558476135865d9ae7b8801a82c177fd1098386ff," so the relevant range of source commits is

> git log --oneline 558476135865d9ae7b8801a82c177fd1098386ff..179a6db61ee30cf776747802f06edeef45fec461
> 179a6db Add RPATH to liblangtag
> 45bae63 Add some static goodness here, too, to avoid duplicate symbols
> b869b73 Avoid duplicate symbols when DISABLE_DYNLOADING for Android
> 4b326ea No need for the juh/juhx dance when DISABLE_DYNLOADING
> e7c9b46 Add some static goodness here, too
> fed4ca1 Sprinkle some staticness to avoid duplicate symbols when DISABLE_DYNLOADING
> c672b1f No point with component_canUnload when DISABLE_DYNLOADING
> 29b0c60 Sprinkle some staticness to avoid duplicate symbols when DISABLE_DYNLOADING
> 8e1e27a cups: initialize thread running member
> 6751cf5 Revert "remove remnants of ProductRegistration"
> 21359dc sw: drop unused includes in unodraw
> 540ab38 sot: memory savings to avoid duplicating the whole stream in RAM
> f3b2fc9 write only non NaN chart series values (fixes part of n#760997
> e2e701b Add SAL_WARN/INFO to network server + remove static reference on exit.
> b590d87 forgot to remove this one
> 6976586 DISABLE_DYNLOADING magic also for the jni_uno environment
> 1f77f1a remove remnants of ProductRegistration
> e0f90c3 introduce new option --disable-cve-tests
> b7c41f1 unusedcode: FastSaxSerializer is not used through UNO
> cf480d6 Move the DBusGObjectPath typedef and formatting changes to Bluetooth includes.
> 8526789 Add SAL_INFO and SAL_WARN to linux bluetooth implementation.
> 37d2124 Some OUString cleanup and ::rtl::OUString to OUString in avmedia
> 288d4bf Move -isysroot from gb_CFLAGS/gb_CXXFLAGS to CC/CXX
> 90fc559 Revert "Pass also gb_CXXFLAGS to the liborcus configury"
> 7e871bb WaE: declaration of 'content' shadows a member of 'this'
> 21b5706 WaE: declaration of 'str' shadows a member of 'this'
> bed5557 WaE: declaration of 'size' shadows a member of 'this'
> 6a8694d Add typedefs not in the 10.4 SDK
> 083fa89 Pass also gb_CXXFLAGS to the liborcus configury
> 53f7f2a sal_Bool to bool
> 25f935b 64-bit fixes
> 591e23d writerfilter: try to make clang tinderbox happy
> 347330f oox: include vector here
> d4ef17a libmerged: use external cups
> cce1368 do not copy these xml files into solver
> dae269b do not copy .ilst files into solver
> 764f0e9 there is no ScpTarget dep target used
> 69a98d2 gbuild: avoid unnecessary Packages while processing scp2 files
> 2855009 SwCrsrShell::Combine: this can be assert
> af4b6c9 rhbz#689053: fix crash following delete at last table cell:
> b74da58 SwHyphWrapper::bShowError is dead
> 9b74656 Start on experimental support for 64-bit Mac code
> ed5c2c9 fix system-clucene/-boost build with gcc 4.4
> e989d167 dung out no longer needed initUCBHelper methods; thanks to sberg.
> a48d072 Translate German comments and a little cleanup of code in svxacorr.cxx.
> 78a3950 fdo#48729 Change int16->int32 in auto replace dialog.
> 1da4e8c sot: stgcache re-factor to use sane lifecycle semantics
> 3fa50ac use correct cell for broadcasting, fdo#55059
> 730ba5d OResultSet: close() is routinely called after dispose()
> e48e489 sot: substantially accelerate sorted cache write-out
> fd2e3ff DOCX ink testcase
> 24f9a18 make <module>.all is apparently not just for dmake modules
> f9a05f4 Some mork driver clean-up and configmgr access fix
> 58d2427 Assuming the double iteration is a copy/paste snafu
> 0423a67 Import bezier curves from .docx.
> 891746e vml import: WaE (unused variable, unhandled enum value)
> 6cf41d0 Add VML path parsing to .docx import filter.
> 8aae567 Wrong include
> 4f18490 Clean up warning/info reporting
> 6435ef9 Lexicographical sorting
> b7db3b8 sot: remove un-used LRU cache
> 422a41f sot: remove horrible hiding of LRU cache map
> 3b3d738 sot: remove unused Owner construct on StgPage
> 045227f RTF ink testcase
Comment 11 Jean-Baptiste Faure 2015-11-15 16:15:54 UTC
(In reply to Mike Kaganski from comment #10)
> Fixed by
> http://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=ca80f73c3a330c38493e5e358bfa887adbe21db2 for bug 95775

Indeed, the attachment now opens with 17 pages instead of only one previously.
Tested with Version: 5.1.0.0.alpha1+
Build ID: 3bdd176731c351638f541a37b94094124f3c9f52
built at home under Ubuntu_15.10_x86-64

Best regards. JBF
Comment 12 raal 2015-11-16 08:25:58 UTC
17 pages in Version: 5.1.0.0.alpha1+
Build ID: 7272e8df62a12d6172b297d7a82a0265cd1bc44a
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2015-11-14_23:41:14

10 pages in MS word 2010
Comment 13 Timur 2015-11-16 09:20:03 UTC
I'd say that the original problem is fixed. Please backport. 
Number of pages is another issue. In Windows it's 10 in MSO and 11 in LO.
Comment 14 Robinson Tryon (qubit) 2015-12-17 09:03:07 UTC Comment hidden (obsolete)