mso-test: remove unnecessary ID attribute from PICT shape

when loading and then saving the document from tdf#91061, we end up with a ID element,
which is not part of the specified format, which causes ms-office to think the document is corrupt

Couple of unit tests which needed to be tweaked, but neither
one appears to related specifically to the now removed "ID" attribute,
the tests where just using that attribute as a convenient handle.

Change-Id: I6c9b54a5a42d530d6c1bc75858d6c55563f778e1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/193036
Reviewed-by: Michael Stahl <michael.stahl@collabora.com>
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>